--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcc 'BV'
 - !lcc 'BX'
 - !lcsh 'Presbyterian Church -- Liturgy -- History'
+- GITenberg
 title: 'Presbyterian Worship: Its Spirit, Method and History'
 url: http://www.gutenberg.org/ebooks/30675
